# mc-server-panel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLERS_README.md  README.md  implementation_summary.md
backend/: Cargo.toml  config.toml.example
backend/mc-players/: Cargo.toml
backend/src/: config.rs  error.rs  main.rs
backend/src/api/: db_handlers.rs  mod.rs  routes.rs
backend/src/api/handlers/: automation.rs  cluster.rs  metrics.rs  mod.rs  process.rs  rcon.rs  security.rs  server.rs
backend/src/api/ws/: client.rs  handler.rs  message.rs  mod.rs
backend/src/automation/: backup.rs  config_version.rs  cron_scheduler.rs  disk_monitor.rs  log_cleanup.rs  migration.rs  mod.rs  restart_strategy.rs  test_suite.rs  update_checker.rs  warmup.rs
backend/src/automation/backup/: handlers.rs
backend/src/automation/cron_scheduler/: handlers.rs
backend/src/cluster/: chat_sync.rs  config_center.rs  data_sync.rs  failover.rs  load_balancer.rs  mod.rs  monitor.rs  node_sync.rs  proxy.rs  rolling_update.rs  topology.rs  types.rs
backend/src/core/: mod.rs  process_manager.rs  rcon_client.rs
backend/src/core/process/: cgroup.rs  cluster.rs  container.rs  crash_diagnosis.rs  error.rs  graceful_shutdown.rs  jvm_tuner.rs  mod.rs  snapshot.rs  start_mode.rs  warmup.rs  watchdog.rs
backend/src/database/: api_keys.rs  archive.rs  backup.rs  connection.rs  economy.rs  export_import.rs  mod.rs  models.rs  optimization.rs  performance.rs  player_stats.rs  schema.rs  sync.rs
backend/src/developer/: console.rs  events.rs  mod.rs  openapi.rs  plugin_hooks.rs  profiler.rs  rate_limiter.rs  request_logger.rs  sdk_generator.rs  webhook.rs  websocket_debugger.rs
backend/src/files/: acl.rs  archive.rs  diff.rs  editor.rs  git_integration.rs  handlers.rs  mod.rs  routes.rs  search.rs  sync.rs  trash.rs  upload.rs  validator.rs
backend/src/monitor/: alert.rs  api.rs  baseline.rs  dashboard.rs  deadlock.rs  disk_io.rs  history.rs  jvm_gc.rs  mod.rs  network.rs  silence.rs  system_monitor.rs  types.rs  webhook.rs
backend/src/players/: handlers.rs  mod.rs  models.rs  routes.rs
backend/src/plugins/: batch.rs  compatibility.rs  dependency.rs  handlers.rs  hot_reload.rs  installer.rs  mod.rs  performance.rs  repository.rs  rollback.rs  routes.rs  security.rs  templates.rs  types.rs
backend/src/security/: api_keys.rs  audit_log.rs  ddos_protection.rs  encryption.rs  ip_filter.rs  mod.rs  rcon_brute_force.rs  security_scan.rs  session.rs  ssl_cert.rs  totp.rs
backend/src/state/: mod.rs
docs/installers/: README.md
docs/superpowers/plans/: 2026-05-11-minecraft-admin-rust-backend.md  (+3 more)
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-mc-panel.js
frontend/docs/: THEME_GUIDE.md
frontend/public/: manifest.json
frontend/src/: App.tsx  M9Dashboard.tsx  index.css
frontend/src/components/: Toast.tsx  (+9 more)
installers/common/: config.yaml  logger.ps1  logger.sh
installers/linux/: config.toml.template  install.sh  uninstall.sh
installers/windows/: config.toml.template  install.ps1  uninstall.ps1
(+65 files in other folders)
