[package]
name = "minecraft-admin"
version = "0.1.0"
edition = "2021"
description = "High-performance Minecraft server management panel"
authors = ["Minecraft Admin Team"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.32"
rcon = { version = "0.6", features = ["rt-tokio"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["io", "codec"] }
bytes = "1.9"
regex = "1.11"
once_cell = "1.20"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.14"
